--- a/amt-exa-PEER-api/src/main/resources/api.yaml
+++ b/amt-exa-PEER-api/src/main/resources/api.yaml
@@ -9,6 +9,42 @@ tags:
   - name: Quotes-end-point
     description: Gestion des quotes
 paths:
+  /produits:
+    get:
+      tags:
+        - Produits-end-point
+      summary: Obtient une liste de tous les produits
+      operationId: getProduits
+      responses:
+        '200':
+          description: OK
+          content:
+            'application/json':
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Produit'
+        '404':
+          description: Not Found
+    post:
+      tags:
+        - Produits-end-point
+      summary: Ajoute un nouveau produit
+      operationId: addProduit
+      requestBody:
+        content:
+          'application/json':
+            schema:
+              $ref: '#/components/schemas/Produit'
+      responses:
+        '201':
+          description: produit crée
+          headers:
+            Location:
+              description: URL du produit crée
+              schema:
+                type: string
+                format: uri
   /produits/{id}:
     get:
       tags:
