--- a/amt-exa-PEER-spec/src/main/resources/api.yaml
+++ b/amt-exa-PEER-spec/src/main/resources/api.yaml
@@ -9,6 +9,65 @@ tags:
   - name: Quotes-end-point
     description: Gestion des quotes
 paths:
+  /produits:
+    get:
+      tags:
+        - Produits-end-point
+      summary: Obtient une liste de tous les produits
+      operationId: getProduits
+      responses:
+        '200':
+          description: OK
+          content:
+            'application/json':
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Produit'
+        '404':
+          description: Not Found
+    post:
+      tags:
+        - Produits-end-point
+      summary: Ajoute un nouveau produit
+      operationId: addProduit
+      requestBody:
+        content:
+          'application/json':
+            schema:
+              $ref: '#/components/schemas/Produit'
+      responses:
+        '201':
+          description: produit crée
+          headers:
+            Location:
+              description: URL du produit crée
+              schema:
+                type: string
+                format: uri
+  /produits/{id}:
+    get:
+      tags:
+        - Produits-end-point
+      summary: Obtient un produit
+      operationId: getProduit
+      parameters:
+        - name: id
+          in: path
+          description: numéro du produit à obtenir
+          required: true
+          schema:
+            type: integer
+            format: int32
+      responses:
+        '200':
+          description: OK
+          content:
+            'application/json':
+              schema:
+                $ref: '#/components/schemas/Produit'
+        '404':
+          description: Not Found
   /quotes:
     get:
       tags:
@@ -86,3 +145,24 @@ components:
           type: integer
           format: int32
       title: Quote
+    Produit:
+      description: toutes les caractéristiques d'un produit
+      type: object
+      properties:
+        numero:
+          description: numéro auto-incrémenté du produit
+          type: integer
+          format: int32
+        description:
+          description: description du produit
+          type: string
+        poids:
+          description: poids du produit
+          type: integer
+          format: int32
+        status_livraison:
+          description: statut de livraison du produit
+          type: integer
+        ville:
+          description: id de la ville de livraison du produit
+          type: integer
